# creating-in-cmake

./: .gitignore  .gitmodules
Examples/01_hello_world/: CMakeLists.txt  main.cpp
Examples/02_link_library/: CMakeLists.txt  main.cpp
Examples/02_version_number/: CMakeLists.txt  config.h.in
Examples/12_version_number/: main.cpp
Examples/21_custom_library/: custom_funcs.cpp  custom_funcs.h
Examples/21_library/: CMakeLists.txt
Examples/22_link_library/: CMakeLists.txt  main.cpp
Examples/23_modular_linking/: CMakeLists.txt  main.cpp
Examples/23_modular_linking/sub_module/: CMakeLists.txt  sub_module.cpp  sub_module.h
Examples/23_modular_project/: CMakeLists.txt
Examples/24_optional_linking/: CMakeLists.txt  config.h.in  main.cpp
